// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`syntax highlighting > given JavaScript code > when rendering JS with different file extension > then applies JavaScript highlighting 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.js[0m                                                                                                     [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 _pi:c[39m[7mv[0mar x = function() { return true; };                                                                            [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with comments > then applies syntax highlighting to comments 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 _pi:c[39m[7m/[0m/ this is a comment                                                                                            [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mconst x = 1;                                                                                                   [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with numbers > then applies syntax highlighting to numeric literals 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 _pi:c[39m[7mc[0monst pi = 3.14;                                                                                                [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mconst count = 100;                                                                                             [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`syntax highlighting > given TypeScript code > when rendering code with strings > then applies syntax highlighting to string literals 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 _pi:c[39m[7mc[0monst msg = "hello world";                                                                                      [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`syntax highlighting > given highlight cache > when content changes > then recomputes highlighting 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: test.ts[0m                                                                                                     [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 [39m2_pi:c[7mc[0monst x = 1;                                                                                                   [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`syntax highlighting > given plain text file > when rendering non-code file > then does not apply syntax highlighting 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m Editing: readme.txt[0m                                                                                                  [39m[38;2;250;208;0m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   1 _pi:c[39m[7mT[0mhis is plain text.                                                                                             [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m   2 [39mNo special tokens.                                                                                             [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m[0m                                                                                                                    [38;2;76;62;118m│[39m
[38;2;76;62;118m│[39m [38;2;76;62;118m esc quit[39m  ↑ nav  pgup scroll  home start  end end  ctrl+s save  ctrl+z undo  ctrl+y redo  ctrl+a select all  ctrl+/ [38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
